fixed caret position for dropdown on mobile

--- a/apparelrow/static/less/base.less
+++ b/apparelrow/static/less/base.less
@@ -571,12 +571,16 @@ body.contest {
             color: #ffffff;
         }
     }
+     @media (min-width: @screen-desktop) {
+       .navbar-nav > .dropdown > a .caret {
+            position:absolute;
+            top:25px;
+            right: 2px;
+        }
+     }
     .navbar-nav > .dropdown > a .caret {
         border-top-color: #ffffff;
         border-bottom-color: #ffffff;
-        position:absolute;
-        top:25px;
-        right: 2px;
     }
     @media screen and (min-width: @grid-float-breakpoint) {
         .navbar-form, .navbar-collapse {
